--- a/css/styles.css
+++ b/css/styles.css
@@ -178,10 +178,16 @@ letter-spacing: 0.02em;
 }
 
 .studio:hover {
-    color:var(--accent-color)
+    color:var(--accent-color);
+    position: relative;
+    
 }
 
+
+
+
 .link {
+    position: relative;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14px;
@@ -197,6 +203,21 @@ letter-spacing: 0.02em;
     color: var(--accent-color);
 }
 
+.current::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--accent-color);
+    position: absolute;
+
+    left: 0%;
+    bottom: -32px;
+
+}
+
+
 /*-------contacts------------*/
 
 
@@ -205,7 +226,7 @@ letter-spacing: 0.02em;
 }
 .contacts {
     display:flex;
-    align-items: center;
+    
     margin-left: auto;
 }
 
@@ -378,19 +399,63 @@ letter-spacing: 0.02em;
 }
 
 /* --------------------------services--------------------------------- */
-.services {
-    background-color: var(--background-color)
-}
-.services-list {
+
+   .section-title {
+    width: 376px;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 36px;
+    line-height: 1.17;
+    text-align: center;
+    margin-bottom: 50px;
+  }
+
+  .servises{
     display: flex;
-    justify-content: space-between;
-}
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 0;
+  }
 
-/* .services-items {
-    margin-left: 30px
-}
- */
+    
+   .servises-items {
+     flex-basis: calc((100% - 60px) / 3); 
+     margin-right: 30px;
+     position: relative;
+   }
 
+   .servises-items:last-child {
+    margin-right: 0px;
+   }
+
+    .servises-items-thumb {
+    display: inline-block;
+    position: relative;
+    }
+
+  .servises-items-text {
+    display: inline-block;
+    position: absolute;
+    width: 100%;
+    height: 70px;
+    top: 100%;
+    left: 100%;
+    
+    transform: translate(-100%,-100%);
+    color: var(--background-color);
+    background-color: rgba(47, 48, 58, 0.8);
+    }
+
+  .servises-items-title {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+
+    }
 
 /* ------------------------------crew----------------------------------- */
 .crew {
@@ -482,25 +547,20 @@ letter-spacing: 0.02em;
 .сlient-list {
     display: flex;
     justify-content: space-between;
-   
+
 }
 
 
 
 .client-item {
     display: flex;
-    margin-top: 50px;
-    margin-bottom: 94px;
-    content: '';
+
     width: 170px;
     height: 92px;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
 }
 
-.client-item:hover {
-border-color: var(--accent-color);
-}
 
 .client-link {
     display: flex;
@@ -518,19 +578,31 @@ border-color: var(--accent-color);
 .client-icon:hover {
     color: var(--accent-color);
 }
+.client-item:hover {
 
-.second-color {
-    color: var(--accent-color);
-}
+    border-color: var(--accent-color);
+    }
+    
+    .client-link:hover {
+        border-color: var(--accent-color);
+        color: var(--accent-color);
+    }
 
 /*--------------footer------------------------*/
 .footer {
+    display: block;
     height: 252px;
     background-color: #2F303A;
     padding-top: 60px;
     padding-bottom: 60px;
-    margin-bottom: -90px;
+    margin-bottom: -100px;
 }
+
+.footer-container {
+    display: flex;
+    align-items: baseline;
+}
+
 .footer-contacts {
 font-size: 14px;
 font-style: normal;
@@ -551,16 +623,21 @@ color: var(--background-color);
 }
 
 .footer-icon-title {
-font-style: normal;
-line-height: 1.14px;
-font-weight: 700;
+    font-size: 14px;
+    font-style: normal;
+line-height: 1.14;
+letter-spacing: 0.03em;
+text-transform: uppercase;
 color: #FFFFFF;
-margin-bottom: 20px;
 }
 
+
+
 .join-us {
-	margin: 12px 0 0 70px;
+    margin-left: 70px;
+
 }
+
 
 .footer-social-list {
     display: flex;
@@ -598,6 +675,10 @@ background-color: var(--accent-color);
     background-color: var(--accent-color);
 }
 
+.footer-contacts:hover {
+    color: var(--accent-color);
+}
+
 .footer-social-link:hover
 .footer-social-link:focus
 /*-----------Second page portfolio------------------*/
@@ -609,12 +690,14 @@ background-color: var(--accent-color);
     letter-spacing: 0.06em;
     margin-top: 20px;
     margin-bottom: 4px;
-
     color: var(--title-text-color);
 }
+
 .portfolio-text {
     font-size: 16px;
     line-height: 1.8;
+    letter-spacing: 0.03em;
+    color: var(--primary-text-color);
 }
 
 .portfolio-btn-list {
@@ -640,12 +723,17 @@ background-color: var(--accent-color);
     border: none;
     padding:6px 22px;
 }
-.portfolio-btn:hover,.portfolio-btn:focus 
-{
+.portfolio-btn:hover,.portfolio-btn:focus {
+    background-color: var(--accent-color);
+    color: #FFFFFF;
     background: var(--accent-color);
     color: F5F4FA;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     cursor: pointer;
-} 
+ 
+}
+
+ 
 
 
 .project-list {
@@ -661,6 +749,34 @@ background-color: var(--accent-color);
     
 }
 
+.project-items-wrapper {
+    position: relative;
+    overflow: hidden;
+}
+
+.project-items-overlay {
+    position: absolute;
+    bottom: -7%;
+    left: 0%;
+   transform: translateY(100%);
+   
+   background-color:  rgba(33, 150, 243, 0.9);
+    width: 100%;
+    height: 100%;
+    padding: 63px 24px 63px 24px;
+    color: var(--background-color);
+    font-size: 18px;
+    line-height: 1.5;
+    text-align: center;
+    transition: 250ms;
+
+}
+
+.project-items:hover .project-items-overlay {
+    transform: translateY(0);
+}
+
+
 .project-items:nth-child(3n+3) {
     margin-right: 0px;
 }
@@ -672,9 +788,75 @@ background-color: var(--accent-color);
     padding-top: 20px;
     border: none;
     border-bottom: 1px solid #EEEEEE;
+    border-right: 1px solid #EEEEEE;
+    border-left: 1px solid #EEEEEE;
+  color: var(--title-text-color);
 }
-
 
 .portfolio-img {
     display: block;
 }
+
+
+ /*modal window*/
+
+ .backdrop {
+    position: absolute;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    background:rgba(0, 0, 0, 0.1);
+    opacity: 1;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 528px;
+    height: 581px;   
+    background-color: var(--background-color);
+    margin-top: 0;
+
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 1;
+
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+   }
+       
+  .backdrop.is-hidden {
+    opacity: 0;
+    z-index: -1;
+       
+  }
+
+  .backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%) scale(0.5);
+    opacity: 1;
+
+  }
+ 
+  .modal-icon-item {
+    width: 22px;
+    height: 22px;
+    align-items: center;
+  }
+
+.modal-icon {
+    align-items: center;
+}
+
+  .data-modal-close {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    top: 1.5%;
+    right: 1.5%;
+    border-radius: 50%;
+    border: 1px solid;
+    border-color: rgba(0, 0, 0, 0.1);
+    padding: 5px 0;
+
+   }
