--- a/css/styles.css
+++ b/css/styles.css
@@ -826,6 +826,14 @@ background-color: var(--accent-color);
     
    }
        
+   .backdrop {
+    position: fixed;
+    top: 0%;
+    left: 0%;
+    background-color: rgba(0, 0, 0, 0.14);
+    z-index: 100;
+   }
+
   .backdrop.is-hidden {
     opacity: 0;
     z-index: -1;
@@ -838,22 +846,31 @@ background-color: var(--accent-color);
 
   }
  
+  .modal {
+    position: absolute;
+  }
+
   .modal-icon-item {
     width: 22px;
     height: 22px;
-    align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0%;
+    transform: translate(9px, 8px)
+
   }
 
 .modal-icon {
     align-items: center;
 }
 
-  .data-modal-close {
+  .modal-btn {
     position: absolute;
     width: 30px;
     height: 30px;
     top: 1.5%;
     right: 1.5%;
+    background-color: var(--background-color);
     border-radius: 50%;
     border: 1px solid;
     border-color: rgba(0, 0, 0, 0.1);
